[package]
name = "bevy_web_keepalive"
version = "0.4.0"
authors = ["Nulled"]
edition = "2021"
rust-version = "1.76"
description = "Bevy plugins to keep a bevy app running in the browser despite not being visible"
readme = "README.md"
repository = "https://github.com/Nul-led/bevy_web_keepalive"
keywords = ["bevy", "wasm", "web", "gamedev"]
categories = ["game-development", "game-engines"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "wasm32-unknown-unknown"

[features]
listener = []
timer = []

[dependencies]
bevy_winit = "0.17"
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_time = "0.17"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Window",
  "Document",
  "Worker",
  "Blob",
  "Url",
] }
