[package]
name = "bevy_web_keepalive"
version = "0.6.2"
authors = ["Nulled"]
edition = "2021"
rust-version = "1.95.0"
description = "Bevy plugins to keep a bevy app running in the browser despite not being visible"
readme = "README.md"
repository = "https://github.com/Nul-led/bevy_web_keepalive"
keywords = ["bevy", "wasm", "web", "gamedev"]
categories = ["game-development", "game-engines"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "wasm32-unknown-unknown"

[features]
listener = []
timer = []

[dependencies]
bevy_winit = "0.19.0"
bevy_app = "0.19.0"
bevy_ecs = "0.19.0"
bevy_time = "0.19.0"
bevy_window = "0.19.0"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = [
  "Window",
  "Document",
  "PageTransitionEvent",
  "Worker",
  "Blob",
  "Url",
  "console",
] }

[dev-dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  "std",
  "web",
  "bevy_log",
  "bevy_window",
  "bevy_winit",
] }
